# fspc

release/: fspc_1.0.1_i386.deb
src/: INSTALL
src/fspc/: CMakeLists.txt  INSTALL  Makefile  configure  fspcApp.cpp  fspcApp.h  fspcCli.cpp  fspcCli.h  fspcCliUnitTest.cpp  fspcConfig.cpp  fspcConfig.h  fspcInfoFrame.cpp  fspcInfoFrame.h  fspcMainFrame.cpp  fspcMainFrame.h  fspcui.fbp  fspcui.xrc  fspcui_zh_CN.fbp  fspcui_zh_CN.xrc  fspcui_zh_TW.fbp  fspcui_zh_TW.xrc  msaccel.c  msaccel.h
src/kernel-driver/: sentelic.c
src/kernel-patches/: sentelic-2.6.17.patch  sentelic-2.6.21-eeepc.patch  sentelic-2.6.25.6.patch  sentelic-2.6.27.1.patch
src/libfsp/: Makefile  fsp.h  libfsp.c  test.c
src/tools/: fsp_pm.sh
